# minigpt4.cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  minigpt4.cpp  minigpt4.h
.github/workflows/: run.yml
examples/: CMakeLists.txt  main.cpp
minigpt4/: colab_webui.ipynb  convert.py  minigpt4_library.py  quantize.py  quantize_all.py  requirements.txt  webui.py
